# thesis-project

./: .gitignore  LICENSE  README.md  gen-db.sh  postgres-config.conf  reset-db.sh  setup-db.sh  setup-vm.sh  tmux.conf  vimrc
create-data/: README.md  create-data.sh
data-analysis/: Describe Data.ipynb  Pipfile  Plot Difference By CPU.ipynb  Plot Difference By RAM.ipynb  Plot Difference By Warehouse.ipynb  Setup.ipynb  gen-html.sh
data-analysis/.ipynb_checkpoints/: Describe Data-checkpoint.ipynb  Plot Difference By CPU-checkpoint.ipynb  Plot Difference By RAM-checkpoint.ipynb  Plot Difference By Warehouse-checkpoint.ipynb
data-analysis/data/: out-w01-c04-r08-js.csv  out-w01-c04-r08-python.csv  out-w01-c04-r08-rust.csv  out-w05-c04-r08-js.csv  out-w05-c04-r08-python.csv  out-w05-c04-r08-rust.csv  out-w10-c01-r08-js.csv  out-w10-c01-r08-python.csv  out-w10-c01-r08-rust.csv  out-w10-c02-r08-js.csv  out-w10-c02-r08-python.csv  out-w10-c02-r08-rust.csv  (+27 more)
fetch-data/: app.py  plot.py  rename.sh
server/: get-req.sh
server/rust-thesis-project/: .env  .gitignore  Cargo.toml  README.md  database-intializer.yml  docker-compose.yml  init-db.sh  install-req.sh  start-dev.sh  start-prod.sh
server/rust-thesis-project/dockerfiles/: Dockerfile.server
server/rust-thesis-project/src/: db_models.rs  delivery_transaction.rs  handlers.rs  lib.rs  main.rs  models.rs  new_order_transaction.rs  order_status_transaction.rs  payment_transaction.rs  schema.rs  services.rs  stock_level_transaction.rs
vm-scripts/: des-api-vm.sh  des-db-vm.sh  gen-api-vm.sh  gen-db-vm.sh
(+72 files in other folders)
