[package]
name = "rust-server"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "3"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.9", features = ["serde", "rustc-serialize"] }
